# kge

./: .gitignore  Dockerfile  Pipfile  README-build.md  README.md  brew-tap-setup.py  build.py  busybox-test.yaml  dependency-check.py  kge  kge.py  nginx-pod.yaml  pyproject.toml  release.py  setup.cfg  setup.py
.github/workflows/: python-publish.yaml  release.yml
.idx/: dev.nix
docker-test/: Dockerfile  docker-run.sh  docker-test.sh
homebrew/: kge.rb
homebrew-formula/: kge.rb
homebrew-kge/: .gitignore  README.md  kge.rb  update_formula.py
homebrew-kge/Formula/: kge_kubectl_get_events.rb
kge/: __init__.py
kge/cli/: main.py
qa-manifests/: missing-configMap.yaml
scripts/: update_dependencies.py
src/: common-utils.py
src/kge/: __init__.py
src/kge/cli/: gemini-attempt.py  gemini-attempt2.py  main.py
src/kge/completion/: _kge
testing-tools/docker-environment/: Dockerfile
testing-tools/qa-manifests-errors/: bad-externalSecret.yaml  bad-pvc.yaml  missing-configMap.yaml  missing-serviceAccount.yaml
testing-tools/qa-manifests-fixed/: bad-pvc.yaml  missing-configMap.yaml  missing-serviceAccount.yaml
tests/: __init__.py  conftest.py  test_completion.py  test_kge_kubectl_get_events.py  test_menu.py  test_version.py
