[tool.poetry]
name = "kge-kubectl-get-events"
version = "0.7.9"
description = "Kubernetes utility for viewing pod and failed replicaset events"
authors = [ "Jesse Goodier" ]
homepage = "https://github.com/jessegoodier/kge"
readme = "README.md"
license = "MIT"
packages = [{include = "kge", from = "src"}]
include = [
    "src/kge/completion/_kge"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
]
keywords = ["kubernetes", "troubleshooting", "kubectl", "events", "pod", "replicaset", "failed", "replicaset", "event"]

[tool.poetry.dependencies]
python = ">=3.13"
colorama = ">=0.4.6,<0.5.0"
kubernetes = ">=32.0.1,<33.0.0"
# cffi = "^1.17.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^4.1.0"
toml = "^0.10.2"

[tool.poetry.scripts]
kge = "kge.cli.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

