[project]
name = "kge-kubectl-get-events"
version = "0.9.13"
description = "Kubernetes utility for viewing pod and failed replicaset events"
authors = [ {name = "Jesse Goodier", email = "31039225+jessegoodier@users.noreply.github.com"} ]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<4.0"
dependencies = [
    "rich>=13.7.0,<14.0.0",
    "kubernetes>=32.0.1,<33.0.0"
]
keywords = ["kubernetes", "troubleshooting", "kubectl", "events", "pod", "replicaset", "failed", "event"]
dynamic = ["classifiers"]

[project.urls]
Homepage = "https://github.com/jessegoodier/kge"
Repository = "https://github.com/jessegoodier/kge"
Documentation = "https://github.com/jessegoodier/kge/blob/main/README.md"
"Bug Tracker" = "https://github.com/jessegoodier/kge/issues"

[project.scripts]
kge = "kge.cli.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel", "tomli>=2.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["kge*"]
exclude = ["tests*", "tests.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]

[tool.flake8]
max-line-length = 110
extend-ignore = [
    "E302",  # expected 2 blank lines
    "E303",  # too many blank lines
    "E305",  # expected 2 blank lines after class or function definition
    "E306",  # expected 1 blank line before a nested definition
    "E501",  # line too long
    "F541",  # f-string is missing placeholders
    "W291",  # trailing whitespace
    "W292",  # no newline at end of file
    "W293",  # blank line contains whitespace
]
per-file-ignores = [
    "__init__.py:F401",  # ignore unused imports in __init__ files
    "tests/*:F401",      # ignore unused imports in test files
    "src/kge/cli/main.py:F401,F841",  # ignore unused imports and variables in main.py
    "release.py:F401"    # ignore unused imports in release.py
]
exclude = [
    "build/*",
    "dist/*",
    ".git/*",
    "__pycache__/*",
    "*.pyc",
    "*.pyo",
    "*.pyd",
    ".Python",
    "env/*",
    "pip-log.txt",
    "pip-delete-this-directory.txt",
    ".tox/*",
    ".coverage",
    ".coverage.*",
    ".cache/*",
    "nosetests.xml",
    "coverage.xml",
    "*.cover",
    "*.log",
    ".pytest_cache/*",
    ".env",
    ".venv/*",
    "venv/*",
    "ENV/*",
    "env.bak/*",
    "venv.bak/*"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "flake8>=7.0.0,<8.0.0",
    "black>=24.1.0,<25.0.0",
    "setuptools>=61.0,<62.0",
    "tomli>=2.0.0,<3.0.0"
]